# synthitect

./: .gitignore  CFAW.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
prompts/: discovery-phase.md  implement-phase.md  probe-phase.md
src/synthitect_mcp/: __init__.py  __main__.py  file_manager.py  server.py
src/synthitect_mcp/prompts/: audit-phase.md  spec-phase.md  tdd-red-phase.md
tests/: __init__.py  test_file_manager.py  test_server.py
