[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "synthitect-mcp"
version = "1.0.0"
description = "Synthitect Protocol MCP Server - Contract-First Agentic Workflow Implementation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Synthitect Protocol Team" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "c-faw",
    "contract-first",
    "agentic-workflow",
    "tdd",
    "software-engineering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
synthitect-mcp = "synthitect_mcp.server:main_cli"

[project.urls]
Homepage = "https://github.com/synthitect/synthitect-protocol"
Documentation = "https://github.com/synthitect/synthitect-protocol#readme"
Repository = "https://github.com/synthitect/synthitect-protocol"

[tool.hatch.build.targets.wheel]
packages = ["src/synthitect_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
